--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Alpha15 – Spiritual Web Tools by momo1322</title>
+<meta name="description" content="A minimalist web collection of spiritual apps by momo1322, including Jap Guardian, Tratak Kriya, and Radha Naam orbit animations. Designed for mindful focus and discreet practice." />
+
   <meta name="google-site-verification" content="XDeMTj6bZV0AqTPtDrSbwxaP1S-f0wvBV_n7hNTZ8UY" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
