--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="app-list">
       <p>[These games are absolutely free with no malicious code]</p>
       <a href="Tratak.html" class="play-btn">🧘‍♂️ Open Tratak Practice</a>
-
+      <a href="radha-reminder.html" class="play-btn">🔔 Open Radha Reminder</a>
     </div>
   </section>
 </body>
