--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h2>Check the apps below :-</h2>
     <!-- Placeholder for app tiles or game embed -->
     <div class="app-list">
-      <p>[These games are absolutely free with no malicious code]</p>
+      <p>[These web applications are absolutely free with no malicious code]</p>
       <a href="Tratak.html" class="play-btn">🧘‍♂️ Open Tratak Practice</a>
       <a href="radha-reminder.html" class="play-btn">🔔 Open Radha Reminder</a>
     </div>
