--- a/radha-reminder.html
+++ b/radha-reminder.html
@@ -1,35 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <title>Smriti Radha – 5 Min Reminder</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="reminder.css" />
+  <meta charset="UTF-8" />
+  <title>Smriti Radha – 5 Min Reminder</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/reminder.css" />
 </head>
 <body>
-<div class="container">
+  <div class="container">
     <h1>🌸 Smriti Radha</h1>
-    <p>Receive a gentle reminder every 5 minutes to say “Radha”.</p>
+    <p>Be reminded to say “Radha” at your chosen interval.</p>
 
     <label>
-        <input type="checkbox" id="silentToggle" />
-        Silent Mode
+      ⏱️ Interval (mins): 
+      <input type="number" id="intervalInput" min="1" value="5" />
+    </label>
+
+    <label>
+      <input type="checkbox" id="silentToggle" />
+      Silent Mode
+    </label>
+
+    <label>
+      <input type="checkbox" id="reverseToggle" />
+      Count Down from 108
     </label>
 
     <button id="japButton">I said Radha 🙏</button>
 
     <div class="counter-container">
-        <svg width="120" height="120">
-            <circle cx="60" cy="60" r="54" stroke="#aaa" stroke-width="10" fill="none"/>
-            <circle id="progressRing" cx="60" cy="60" r="54" stroke="#ff69b4" stroke-width="10" fill="none"
-                    stroke-dasharray="339" stroke-dashoffset="339" />
-        </svg>
-        <span id="japCount">0</span>
+      <svg width="120" height="120">
+        <circle cx="60" cy="60" r="54" stroke="#aaa" stroke-width="10" fill="none"/>
+        <circle id="progressRing" cx="60" cy="60" r="54" stroke="#ff69b4" stroke-width="10" fill="none"
+          stroke-dasharray="339" stroke-dashoffset="339" />
+      </svg>
+      <span id="japCount">108</span>
     </div>
 
+    <details class="advanced">
+      <summary>🔬 Advanced Testing Section</summary>
+      <button onclick="triggerReminder()">Test Reminder Now</button>
+      <button onclick="resetCounter()">Reset Counter</button>
+      <button onclick="console.log(getState())">Log State</button>
+      <button onclick="simulateGlow()">Preview Glow</button>
+    </details>
+
     <div id="glowEffect" class="glow hidden"></div>
-    <audio id="radhaSound" src="audio/digi-beep-qst-346094.mp3" preload="auto"></audio>
-</div>
-<script src="reminder.js"></script>
+    <audio id="radhaSound" src="audio/radha.mp3" preload="auto"></audio>
+  </div>
+
+  <script src="js/reminder.js"></script>
 </body>
 </html>
