--- a/radha-reminder.html
+++ b/radha-reminder.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Smriti Radha – 5 Min Reminder</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/reminder.css" />
+  <link rel="stylesheet" href="reminder.css" />
 </head>
 <body>
   <div class="container">
@@ -49,6 +49,6 @@
     <audio id="radhaSound" src="audio/radha.mp3" preload="auto"></audio>
   </div>
 
-  <script src="js/reminder.js"></script>
+  <script src="reminder.js"></script>
 </body>
 </html>
