--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="app-list">
       <p>[These web applications are absolutely free with no malicious code]</p>
       <a href="Tratak.html" class="play-btn">🧘‍♂️ Open Tratak Practice</a>
-      <a href="radha-reminder.html" class="play-btn">🔔 Open Radha Reminder</a>
+      <a href="https://claude.ai/public/artifacts/b352cb17-022a-4b38-b1eb-3e14fd29c2a5" class="play-btn">🔔 Open Radha Reminder</a>
     </div>
   </section>
 </body>
