--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="app-list">
       <p>[These web applications are absolutely free with no malicious code]</p>
       <a href="Tratak.html" class="play-btn">🧘‍♂️ Open Tratak Practice</a>
-      <a href="https://claude.ai/public/artifacts/65e717e9-3878-407b-b34c-f82dc0cce738" class="play-btn">🔔 Open Radha Reminder</a>
+      <a href="NaamJap.html" class="play-btn">🔔 Open Radha Reminder</a>
     </div>
   </section>
 </body>
