--- a/index.html
+++ b/index.html
@@ -1,33 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Alpha15 – Spiritual Web Tools by momo1322</title>
-<meta name="description" content="A minimalist web collection of spiritual apps by momo1322, including Jap Guardian, Tratak Kriya, and Radha Naam orbit animations. Designed for mindful focus and discreet practice." />
-
-  <meta name="google-site-verification" content="XDeMTj6bZV0AqTPtDrSbwxaP1S-f0wvBV_n7hNTZ8UY" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Spiritual</title>
+  <meta name="description" content="A minimalist suite blending reflex training with focused tools. Includes mental focus modules and slope gameplay." />
+  <title>Alpha15 – Reflex Suite by momo1322</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    body { font-family: sans-serif; background: #f0f0f0; margin: 0; }
+    .hero { background: black; color: white; padding: 2em; text-align: center; }
+    .play-btn { display: inline-block; margin: 1em; padding: 0.8em 1.2em; background: #007BFF; color: white; text-decoration: none; border-radius: 5px; }
+    .apps-section { padding: 2em; text-align: center; }
+    .hidden-zone { display: none; margin-top: 2em; }
+    iframe { max-width: 100%; border: none; }
+    details { margin-top: 1em; text-align: left; display: inline-block; max-width: 400px; background: #fff; padding: 1em; border-radius: 5px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+    summary { font-weight: bold; cursor: pointer; }
+  </style>
 </head>
 <body>
   <div class="hero">
-    <div class="overlay">
-      <h1>Spiritual</h1>
-      <p>Integrate spirituality with technology...</p>
-      <p class="sub">If you want to integrate your spirituality with some technological tweaks,<br/>you are at the right place!</p>
-      <a class="play-btn" href="#apps">▶️ Click here to check the web apps</a>
-    </div>
+    <h1>Reflex Suite</h1>
+    <p>Train focus and reaction while unlocking hidden modules 🧩</p>
+    <p class="sub">Press <strong>Ctrl+Shift+S</strong> to toggle hidden zones.</p>
+    <a class="play-btn" href="#apps">▶️ Jump into Reflex Mode</a>
   </div>
 
   <section id="apps" class="apps-section">
-    <h2>Check the apps below: -</h2>
-    <!-- Placeholder for app tiles or game embed -->
-    <div class="app-list">
-      <p>[These web applications are absolutely free with no malicious code]</p>
-      <a href="Tratak.html" class="play-btn">🧘‍♂️ Open Tratak Practice</a>
-      <a href="NaamJap.html" class="play-btn">🔔 Open The Jap Counter</a>
+    <h2>Embedded Reflex App:</h2>
+    <iframe src="https://y8.com/embed/slope" style="width: 960px; height: 641px;"></iframe>
+
+    <div class="hidden-zone" id="spiritual-zone">
+      <h3>🧘 Hidden Focus Modules</h3>
+      <details>
+        <summary>Tratak Kriya</summary>
+        <a href="Tratak.html" class="play-btn">Launch Tratak</a>
+      </details>
+      <details>
+        <summary>Radha Naam Jap Counter</summary>
+        <a href="NaamJap.html" class="play-btn">Open Jap Counter</a>
+      </details>
     </div>
   </section>
+
+  <script>
+    document.addEventListener('keydown', function(e) {
+      if (e.ctrlKey && e.shiftKey && e.code === 'KeyS') {
+        const zone = document.getElementById('spiritual-zone');
+        zone.style.display = zone.style.display === 'none' ? 'block' : 'none';
+      }
+    });
+  </script>
 </body>
 </html>
