--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </details>
       <details>
         <summary>Radha Naam Jap Counter</summary>
-        <a href="NaamJap.html" class="play-btn">Open Jap Counter</a>
+        <a href="https://app--chant-counter-89abd2c8.base44.app/Counter" class="play-btn">Open Jap Counter</a>
       </details>
     </div>
   </section>
